fix pre-wrap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,10 @@ body{
   font-family: $SansSerif;
 }
 
+pre{
+  white-space: pre-wrap;
+}
+
 .main-content{
   h1,h2,h3,h4,h5,h6{
     font-family: $Courier;
